# otherdb-rs

./: .gitignore  Cargo.toml  README.md  other_dbpy.pyi  pyproject.toml
document/: Python使用.md  快速开始.md
py_example/: Hashtable.py  List.py  archive.py  building_archives.py
src/: lib.rs  main.rs
src/sdk/: archive.rs  db.rs  mod.rs
src/test/: mod.rs  sled_test.rs
